alignment fix for unit-tests

--- a/wp-content/themes/wp-bs-theme-simple/css/wp-bs-theme-simple.css
+++ b/wp-content/themes/wp-bs-theme-simple/css/wp-bs-theme-simple.css
@@ -7,6 +7,17 @@
 .navbar-nav li a {
   line-height: 50px; }
 
+/* Test: reduce size of massively large image with no alignment.
+ *  http://wp.local/archives/tag/alignment-2
+*/
+.entry-content .wp-caption {
+  max-width: 100%; }
+
+.entry-content img {
+  border: none;
+  height: auto;
+  max-width: 100%; }
+
 /* grid-patterns */
 /* one-column */
 /* full-width */
